--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">criminal-intent</string>
+    <string name="title_activity_crime">CrimeActivity</string>
+    <string name="crime_title_hint">Enter a title for the crime.</string>
 </resources>
